# aws-pgsql-odbc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .vsconfig  CHANGELOG.md  CONTRIBUTING.md  Maintenance.md  Makefile.am  README.md  aws_errmsgs.h  bind.c  columninfo.c  configure.ac  connection.c  connection.h  convert.c  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  environ.c  execute.c  info.c  inouealc.c  loadlib.c  misc.c  multibyte.c  mylog.c  odbc.sql  odbcapi.c  odbcapi30.c  odbcapi30w.c  odbcapiw.c  options.c  parse.c  pgapi30.c  pgtypes.c  (+24 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: dockerized-linux-integration-tests.yml  dockerized-linux-limitless-tests.yml  dockerized-linux-regression-tests.yml  dockerized.yml  failover-integration-tests-windows.yml  integration-tests-macos.yml  integration-tests-windows.yml  integration-tests.yml  integration.yml  limitless-tests.yml  macos-failover-integration-tests.yml  macos-integration-debug-tests.yml  macos-integration-tests.yml  macos-regression-tests.yml  main-macos.yml  main-windows.yml  main.yml  release_draft.yml  remove-old-artifamls.yml  test.yml  windows-failover-integration-tests.yml  windows-limitless-integration-tests.yml  windows-regression-tests.yml
aws-pgsql-odbc.xcodeproj/: project.pbxproj
aws-pgsql-odbc.xcodeproj/xcshareddata/xcschemes/: aws-pgsql-odbc.xcscheme  awspgsqlodbca.xcscheme  awspgsqlodbcw.xcscheme
docs/: Documentation.md  authentication.md  config-opt.html  documentation.md  getting_started.md  readme.md  release.html  win32-compilation.html  win32-compilation.md
docs/authentication/: adfs_authentication.md  database_authentication.md  iam_authentication.md  okta_authentication.md  secret_manager_authentication.md
docs/build-and-test-aws-driver/: Build.md  Test.md  build.md  test.md
docs/limitless/: limitless_sample.cpp  limtless.md
docs/using-the-aws-driver/: using_the_aws_driver.md
docs/using-the-aws-driver/authentication/: adfs_authentication.md  adfs_authentication_sample.cpp  authentication.md  database_authentication.md  iam_authentication.md  iam_authentication_sample.cpp  okta_authentication.md  okta_authentication_sample.cpp  secret_manager_authentication.md  secrets_manager_authentication.md  secrets_manager_authentication_sample.cpp  simple_database_connection_sample.cpp
docs/using-the-aws-driver/failover/: failover.md  failover_sample_code.cpp
docs/using-the-aws-driver/limitless/: limitless.md  limitless_sample.cpp
installer/: README.txt  buildInstallers.ps1  installer.mak  modify_msi.vbs  productcodes.mak  psqlodbc_cpu.wxs  psqlodbcm_cpu.wxs
installer/psqlodbc-setup/: Bundle.wxs  psqlodbc-setup.wixproj
linux/: buildall  run_community_tests
macos/: .odbc-template.ini  aws_rds_helper  buildall  odbcinst-template.ini
scripts/: aws_rds_helper.ps1  build_aws_sdk_macos  build_aws_sdk_win.ps1  sign_installer.ps1
test/: .gitignore  Makefile.in  README.txt  odbcini-gen-debug.sh  odbcini-gen.sh  runsuite.c  sampletables.sql  tests-linux  tests-macos
test/expected_ansi/: lfconversion.out  odbc-escapes.out  result-conversions.out
test/limitless-performance-test/: Limitless Performance.jmx  limitless-performance-test.cpp  limitless-performance-test.sln  limitless-performance-test.vcxproj
test/src/: alter-test.c  arraybinding-test.c  bindcol-test.c  bookmark-test.c  bulkoperations-test.c  common.c  cte-test.c  cursor-block-delete-test.c  cursor-commit-test.c  cursor-movement-test.c  cursor-name-test.c  cursors-test.c  cvtnulldate-test.c  declare-fetch-block-test.c  declare-fetch-commit-test.c  deprecated-test.c  descrec-test.c  diagnostic-test.c  error-rollback-test.c  getresult-test.c  identity-test.c  insertreturning-test.c  lfconversion-test.c  notice-test.c  odbc-escapes-test.c  params-batch-exec-test.c  params-test.c  positioned-update-test.c  premature-test.c  prepare-test.c  stmthandles-test.c  update-test.c  wchar-char-test-eucjp.c  wchar-char-test-sjis.c  wchar-char-test-utf8.c
test_integration/: CMakeLists.txt  base_failover_integration_test.cc  connection_string_builder.h  connection_string_builder_test.cc  failover_integration_test.cc  iam_authentication_integration_test.cc  integration_test_utils.cc  integration_test_utils.h  limitless_integration_test.cc  secrets_manager_integration_test.cc
test_integration/library_utils/: host_info.h  host_selector.h  round_robin_host_selector.h  round_robin_property.h  sliding_cache_map.cc
testframework/: build.gradle.kts
testframework/src/test/java/host/: IntegrationContainerTest.java
testframework/src/test/java/utility/: AuroraClusterInfo.java  AuroraTestUtility.java  ConsoleConsumer.java  ContainerHelper.java  StringUtils.java
testframework/src/test/resources/: odbc.ini.in  odbcinst.ini.in
winbuild/: BuildAll.ps1  MSProgram-Get.psm1  editConfiguration.ps1  pgenlist.vcxproj  psqlodbc.sln  psqlodbc.vcxproj  psqlsetup.vcxproj  regress.ps1  regress_one.vcxproj  std_dbmsname.Cpp.props
windows/: buildall.ps1
wrapper/: RDSClient_wrapper.cpp  RDSClient_wrapper.h  adfs.cpp  adfs.h  federation.cpp  federation.h  rds_api.cpp  rds_api.h
